# jni_project

./: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  test_jni_algorithm  test_jni_algorithm.cpp
include/: com_launch_chyc_jni_JniAlgorithm.h
src/: Algorithm.cpp  Algorithm_old.cpp
src-java/com/launch/chyc/jni/: JniAlgorithm.java  JniAlgorithmTest.java  TestMain.java
src-java/com/launch/core/jni/: StringWraper.java
